# directory-ove-ip

./: .gitignore  Cargo.toml  config.yaml  log4rs.yml
src/: config.rs  lib.rs  main.rs
src/http/: mod.rs  routes.rs
src/net/: bootstrap.rs
src/notes/: main.1.rs  main.axio.rs  main.hyper.rs  main.old.rs  stun.rs
src/protocols/: mod.rs
src/protocols/gossip/: gossip.rs
src/protocols/nat/: discovery.rs
src/protocols/swim/: http_client.rs  messages.rs  mod.rs  routes.rs  swim.rs
tests/: swim_test.rs
