[package]
name = "doip"
version = "0.1.0"
authors = ["dejano <dejan@referrizer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.9", features = ["json", "blocking"] }
actix-web = "3"
actix = "0.10"
actix-rt = "1.1.1"
rand = "0.7"
stun = "0.0.2"
bincode = "1.3"
byte = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.6.0"
config = "0.10.1"
dotenv = "0.15.0"
thiserror = "1.0.22"
log = "0.4.11"
log4rs = "1.0.0-alpha-2"
derive_more = "0.99.11"

[dev-dependencies]
rstest = "0.6.4"